--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,10 +1,10 @@
-name: Rust
+name: hello world 
 
-on:
+on: 
   push:
     branches: [ main ]
   pull_request:
-    branches: [ main ]
+    branches: [ readme-edit ]
 
 env:
   CARGO_TERM_COLOR: always
@@ -16,7 +16,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Build
+    - name: hello world
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
